Bug 928336.  Make defining unforgeable properties on objects faster by just copying them from an unforgeable holder object.  r=peterv